# v8_export

./: .gitignore  CMakeLists.txt  V8AbstractInspector.h  V8AbstractInspectorChannel.h  V8InspectorChannelImpl.cpp  V8InspectorChannelImpl.h  V8InspectorClientImpl.cpp  V8InspectorClientImpl.h  V8InspectorInterface.h  args.gn  build_copy_darwin_arm64.sh  build_copy_darwin_x64.sh  build_copy_linux_x64.sh  build_copy_win_x64.sh  main.cpp  v8_export.cc
lib/: boost_system.lib  icui18n.dll.lib  v8_libbase.dll.lib  v8_libplatform.dll.lib
lib_win_x64/: icuuc.dll.lib  zlib.dll.lib
